# basegraphics

./: .gitignore  BaseGraphics.sln  CMakeLists.txt  README.md
Base/: Base.vcxproj  Base.vcxproj.filters  Gfx.cpp  Gfx.h  GfxTypes.h  TextureBuffer.cpp  TextureBuffer.h  VertexBuffer.cpp  VertexBuffer.h  ZBuffer.cpp  ZBuffer.h
Bresenham/: BitmapBuffer.cpp  BitmapBuffer.h  Bresenham.vcxproj  Program.cpp
BresenhamAnimated/: BitmapBuffer.h  BresenhamAnimated.vcxproj  BresenhamAnimated.vcxproj.filters  Program.cpp
Framebuffer/: Framebuffer.vcxproj  Program.cpp
Lines/: Lines.vcxproj  Lines.vcxproj.filters  Program.cpp
Points/: Points.vcxproj  Program.cpp
PolygonRenderer/: PolygonRenderer.vcxproj  PolygonRenderer.vcxproj.filters  Program.cpp
PolygonRendererAnimated/: PolygonRendererAnimated.vcxproj  PolygonRendererAnimated.vcxproj.filters  Program.cpp
Polygons/: Polygons.vcxproj  Polygons.vcxproj.filters  Program.cpp
Sources/01_SamplePoint/: CMakeLists.txt  Main.cpp
Sources/02_SampleLines/: CMakeLists.txt  Main.cpp
Sources/03_SamplePointRotation/: CMakeLists.txt  Main.cpp
Sources/04_SamplePointProjection/: CMakeLists.txt  Main.cpp
Sources/05_SamplePolygonalDraw/: CMakeLists.txt  Main.cpp
Sources/06_SampleJointMovement/: CMakeLists.txt  Main.cpp
Sources/06_SampleSkeletalBasics/: CMakeLists.txt  Main.cpp  Skeleton.hpp
Sources/07_RandomVectorWithinCone/: CMakeLists.txt  Main.cpp
Sources/Gfx/: CMakeLists.txt  Gfx.hpp  ImageBuffer.hpp  Rasterizer.hpp
Sources/Math/: CMakeLists.txt  Math.hpp
Sources/SamplePoint/: CMakeLists.txt  Main.cpp
Sources/Tools/: CMakeLists.txt
WhiteNoise/: Program.cpp  WhiteNoise.vcxproj  WhiteNoise.vcxproj.filters
WireRenderer/: BitmapBuffer.cpp  Program.cpp  VertexBuffer.cpp  VertexBuffer.h  WireRenderer.vcxproj  WireRenderer.vcxproj.filters
WireRendererAnimated/: Program.cpp  WireRendererAnimated.vcxproj  WireRendererAnimated.vcxproj.filters
